--- a/source/TodoistReview/Views/Shared/_Layout.cshtml
+++ b/source/TodoistReview/Views/Shared/_Layout.cshtml
@@ -7,6 +7,12 @@
     <link href="~/Content/reviewapp.css" rel="stylesheet" type="text/css" />
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <script src="~/Scripts/modernizr-2.6.2.js"></script>
+    <style type="text/css">
+        /* essential styles to be used before external stylesheet and scripts load */
+        .hidden-by-default {
+            display: none;
+        }
+    </style>
 </head>
 <body>
     <div class="container body-content">
