Fix JS and html warnings generated by R#

--- a/source/TodoistReview/Views/Shared/_Layout.cshtml
+++ b/source/TodoistReview/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
     </style>
 </head>
 <body>
-    <div class="container body-content">
+    <div class="container">
         @RenderBody()
     </div>
 </body>
