Refactoring: reduce number of R# warnings in C# code

--- a/source/TodoistReview/Views/Home/Login.cshtml
+++ b/source/TodoistReview/Views/Home/Login.cshtml
@@ -8,7 +8,7 @@
 
 <form class="form-inline">
     <div class="form-group">
-        @Html.EditorFor(model => model.APIToken, new { htmlAttributes = new { @class = "form-control", placeholder = "Todoist API Token" } })
+        @Html.EditorFor(model => model.ApiToken, new { htmlAttributes = new { @class = "form-control", placeholder = "Todoist API Token" } })
     </div>
 
     <button type="submit" class="btn btn-primary">Log in</button>
