Force stylesheet cache refresh

--- a/source/TodoistReview/Views/Shared/_Layout.cshtml
+++ b/source/TodoistReview/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - Todoist Review</title>
-    <link href="~/Content/reviewapp.min.css" rel="stylesheet" type="text/css" />
+    <link href="~/Content/reviewapp.min.css?v=2" rel="stylesheet" type="text/css" />
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <style type="text/css">
         /* essential styles to be used before external stylesheet and scripts load */
