--- a/source/TodoistReview/Content/reviewapp.css
+++ b/source/TodoistReview/Content/reviewapp.css
@@ -24,11 +24,6 @@
                 color: #fff;
             }*/
 }
-.reviewedTask .all-labels .label[data-id='-1'] {
-  color: #b70000;
-  border-color: #b70000;
-  background-color: #fff0f0;
-}
 .reviewedTask .all-labels .label .glyphicon {
   padding-bottom: 10px;
   display: inline-block;
@@ -50,4 +45,49 @@
 }
 .reviewedTask nav.footer div button {
   width: 100%;
+}
+.priority {
+  display: inline-block;
+  width: 100%;
+  padding: 20px;
+  font-size: larger;
+  text-align: center;
+  color: #000;
+  cursor: pointer;
+  margin-top: 10px;
+}
+.priority.priority-1 {
+  color: #000000;
+  border-color: #000000;
+  background-color: #ffffff;
+}
+.priority.priority-1.selected {
+  box-shadow: 0px 0px 5px #000000;
+}
+.priority.priority-2 {
+  color: #d4b300;
+  border-color: #d4b300;
+  background-color: #fffdf4;
+}
+.priority.priority-2.selected {
+  box-shadow: 0px 0px 5px #d4b300;
+}
+.priority.priority-3 {
+  color: #f88900;
+  border-color: #f88900;
+  background-color: #fff0de;
+}
+.priority.priority-3.selected {
+  box-shadow: 0px 0px 5px #f88900;
+}
+.priority.priority-4 {
+  color: #dc1010;
+  border-color: #dc1010;
+  background-color: #ffe7e7;
+}
+.priority.priority-4.selected {
+  box-shadow: 0px 0px 5px #dc1010;
+}
+.hidden-by-default {
+  display: none;
 }
