--- a/source/TodoistReview/Views/Shared/_Layout.cshtml
+++ b/source/TodoistReview/Views/Shared/_Layout.cshtml
@@ -6,6 +6,21 @@
     <title>@ViewBag.Title - Todoist Review</title>
     <link href="~/Content/reviewapp.min.css?v=2" rel="stylesheet" type="text/css" />
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <link rel="manifest" href="/manifest.json">
+    
+    <link rel="icon" href="/Content/icon.ico" type="image/x-icon" />
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="application-name" content="Review">
+    <meta name="apple-mobile-web-app-title" content="Review">
+    <meta name="theme-color" content="#03a6ff">
+    <meta name="msapplication-navbutton-color" content="#03a6ff">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="msapplication-starturl" content="/">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <link rel="icon" type="image/png" sizes="256x256" href="/Content/icon.png">
+    <link rel="apple-touch-icon" type="image/png" sizes="256x256" href="/Content/icon.png">
     <style type="text/css">
         /* essential styles to be used before external stylesheet and scripts load */
         .hidden-by-default {
