Add time estimate calculation to the View

--- a/source/TodoistReview/Content/reviewapp.less
+++ b/source/TodoistReview/Content/reviewapp.less
@@ -117,6 +117,25 @@
     }
 }
 
+.time {
+    text-align: center;
+    color: #000000;
+    cursor: pointer;
+    margin-top: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+
+    &.add-time {
+        border: 1px solid #b8ffd7;
+        background-color: #f5fff5;
+    }
+
+    &.reduce-time {
+        border: 1px solid #ff9999;
+        background-color: #ffecec;
+    }
+}
+
 .hidden-by-default {
     display: none;
 }
