--- a/source/TodoistReview/Content/reviewapp.css
+++ b/source/TodoistReview/Content/reviewapp.css
@@ -88,6 +88,22 @@
 .priority.priority-4.selected {
   box-shadow: 0px 0px 5px #dc1010;
 }
+.time {
+  text-align: center;
+  color: #000000;
+  cursor: pointer;
+  margin-top: 20px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+.time.add-time {
+  border: 1px solid #b8ffd7;
+  background-color: #f5fff5;
+}
+.time.reduce-time {
+  border: 1px solid #ff9999;
+  background-color: #ffecec;
+}
 .hidden-by-default {
   display: none;
 }
