--- a/source/TodoistReview/Views/Home/Index.cshtml
+++ b/source/TodoistReview/Views/Home/Index.cshtml
@@ -20,7 +20,7 @@
 <div class="reviewedTask hidden-by-default" data-bind="if: loaded() && !ajaxError() && tasks().length !== 0">
 
     <div class="task" data-bind="with: currentTask">
-        <span data-bind="text: content"></span>
+        <span data-bind="text: content"></span> <strong>(<span data-bind="text: time"></span> min)</strong>
     </div>
 
     <h4 data-bind="if: labels().length == 0">You have no labels defined. Define your contexts as labels in Todoist first.</h4>
@@ -40,32 +40,59 @@
         </div>
     </div>
 
-    <div class="all-labels row" data-bind="foreach: labels">
-        <div class="col-xs-4">
-            <div class="label" data-bind='attr: {"data-id": id}'>
-                <span data-bind="css: glyphicon" class="glyphicon"></span><br />
-                <span data-bind="text: name"></span>
+    <div class="all-times row">
+        <div class="col-xs-3">
+            <div class="time add-time" data-time-to-add="1">+1 min</div>
+        </div>
+        <div class="col-xs-3">
+            <div class="time add-time" data-time-to-add="5">+5 min</div>
+        </div>
+        <div class="col-xs-3">
+            <div class="time add-time" data-time-to-add="10">+10 min</div>
+        </div>
+        <div class="col-xs-3">
+            <div class="time add-time" data-time-to-add="60">+60 min</div>
+        </div>
+        <div class="col-xs-3">
+            <div class="time reduce-time" data-time-to-add="-1">-1 min</div>
+        </div>
+        <div class="col-xs-3">
+            <div class="time reduce-time" data-time-to-add="-5">-5 min</div>
+        </div>
+        <div class="col-xs-3">
+            <div class="time reduce-time" data-time-to-add="-10">-10 min</div>
+        </div>
+        <div class="col-xs-3">
+            <div class="time reduce-time" data-time-to-add="-60">-60 min</div>
+        </div>
+        </div>
+
+        <div class="all-labels row" data-bind="foreach: labels">
+            <div class="col-xs-4">
+                <div class="label" data-bind='attr: {"data-id": id}'>
+                    <span data-bind="css: glyphicon" class="glyphicon"></span><br />
+                    <span data-bind="text: name"></span>
+                </div>
             </div>
         </div>
+
+        <nav class="footer row">
+            <div class="col-xs-4">
+                <button id="back" type="button" class="btn btn-lg" data-bind="enable: isFirstTask() === false">Back</button>
+            </div>
+            <div class="col-xs-8" data-bind="visible: isLastTask() === false">
+                <button id="save" type="button" class="btn btn-primary btn-lg" data-bind="enable: isLastTask() === false">Next</button>
+            </div>
+            <div class="col-xs-8" data-bind="visible: isLastTask() === true">
+                <button id="sync" type="button" class="btn btn-info btn-lg">Sync</button>
+            </div>
+
+        </nav>
     </div>
-    
-    <nav class="footer row">
-        <div class="col-xs-4">
-            <button id="back" type="button" class="btn btn-lg" data-bind="enable: isFirstTask() === false">Back</button>
-        </div>
-        <div class="col-xs-8" data-bind="visible: isLastTask() === false">
-            <button id="save" type="button" class="btn btn-primary btn-lg" data-bind="enable: isLastTask() === false">Next</button>
-        </div>
-        <div class="col-xs-8" data-bind="visible: isLastTask() === true">
-            <button id="sync" type="button" class="btn btn-info btn-lg">Sync</button>
-        </div>
 
-    </nav>
-</div>
-
-<script src="~/Scripts/jquery-3.2.1.min.js"></script>
-<script src="~/Scripts/knockout-3.4.2.js"></script>
-<script src="~/Scripts/reviewapp.js"></script>
-<script type="text/javascript">
-    $(".hidden-by-default").removeClass("hidden-by-default");
-</script>
+    <script src="~/Scripts/jquery-3.2.1.min.js"></script>
+    <script src="~/Scripts/knockout-3.4.2.js"></script>
+    <script src="~/Scripts/reviewapp.js"></script>
+    <script type="text/javascript">
+        $(".hidden-by-default").removeClass("hidden-by-default");
+    </script>
