Parse original estimate from a task's content

--- a/source/TodoistReview/Content/reviewapp.css
+++ b/source/TodoistReview/Content/reviewapp.css
@@ -8,7 +8,7 @@
   display: none;
 }
 .reviewedTask .all-labels {
-  margin-top: 2em;
+  margin-top: 10px;
 }
 .reviewedTask .all-labels .label {
   display: inline-block;
@@ -92,7 +92,7 @@
   text-align: center;
   color: #000000;
   cursor: pointer;
-  margin-top: 20px;
+  margin-top: 10px;
   padding-top: 10px;
   padding-bottom: 10px;
 }
@@ -100,7 +100,7 @@
   border: 1px solid #b8ffd7;
   background-color: #f5fff5;
 }
-.time.reduce-time {
+.time.reset-time {
   border: 1px solid #ff9999;
   background-color: #ffecec;
 }
