--- a/source/TodoistReview/Content/reviewapp.less
+++ b/source/TodoistReview/Content/reviewapp.less
@@ -14,7 +14,7 @@
     }
 
     .all-labels {
-        margin-top: 2em;
+        margin-top: 10px;
 
         .label {
             display: inline-block;
@@ -121,7 +121,7 @@
     text-align: center;
     color: #000000;
     cursor: pointer;
-    margin-top: 20px;
+    margin-top: 10px;
     padding-top: 10px;
     padding-bottom: 10px;
 
@@ -130,7 +130,7 @@
         background-color: #f5fff5;
     }
 
-    &.reduce-time {
+    &.reset-time {
         border: 1px solid #ff9999;
         background-color: #ffecec;
     }
