--- a/source/TodoistReview/Views/Home/Index.cshtml
+++ b/source/TodoistReview/Views/Home/Index.cshtml
@@ -42,30 +42,18 @@
 
     <div class="all-times row">
         <div class="col-xs-3">
-            <div class="time add-time" data-time-to-add="1">+1 min</div>
+            <div class="time reset-time" data-time-to-add="0">reset</div>
+        </div>
+        <div class="col-xs-3">
+            <div class="time add-time" data-time-to-add="15">+15 min</div>
         </div>
         <div class="col-xs-3">
             <div class="time add-time" data-time-to-add="5">+5 min</div>
         </div>
         <div class="col-xs-3">
-            <div class="time add-time" data-time-to-add="10">+10 min</div>
+            <div class="time add-time" data-time-to-add="1">+1 min</div>
         </div>
-        <div class="col-xs-3">
-            <div class="time add-time" data-time-to-add="60">+60 min</div>
-        </div>
-        <div class="col-xs-3">
-            <div class="time reduce-time" data-time-to-add="-1">-1 min</div>
-        </div>
-        <div class="col-xs-3">
-            <div class="time reduce-time" data-time-to-add="-5">-5 min</div>
-        </div>
-        <div class="col-xs-3">
-            <div class="time reduce-time" data-time-to-add="-10">-10 min</div>
-        </div>
-        <div class="col-xs-3">
-            <div class="time reduce-time" data-time-to-add="-60">-60 min</div>
-        </div>
-        </div>
+    </div>
 
         <div class="all-labels row" data-bind="foreach: labels">
             <div class="col-xs-4">
