--- a/source/Taurit.TodoistTools.Review/Views/Home/Index.cshtml
+++ b/source/Taurit.TodoistTools.Review/Views/Home/Index.cshtml
@@ -1,94 +1,87 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
+﻿
+@{
+    ViewBag.Title = "Index";
 }
 
-<div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
-    <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner" role="listbox">
-        <div class="item active">
-            <img src="~/images/banner1.svg" alt="ASP.NET" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    Learn how to build ASP.NET apps that can run anywhere.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525028&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
-            </div>
-        </div>
-        <div class="item">
-            <img src="~/images/banner2.svg" alt="Visual Studio" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    There are powerful new features in Visual Studio for building modern web apps.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525030&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
-            </div>
-        </div>
-        <div class="item">
-            <img src="~/images/banner3.svg" alt="Microsoft Azure" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    Learn how Microsoft's Azure cloud platform allows you to build, deploy, and scale web apps.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525027&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
-            </div>
-        </div>
+<div data-bind="if: !loaded()" class="hidden-by-default">
+    <div class="jumbotron jumbotron-loading">
+        <h1>Loading...</h1>
+        <p>Todoist Review App is getting your data. It should take no more than a few seconds. Please wait!</p>
     </div>
-    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-    </a>
 </div>
 
-<div class="row">
-    <div class="col-md-3">
-        <h2>Application uses</h2>
-        <ul>
-            <li>Sample pages using ASP.NET Core MVC</li>
-            <li>Theming using <a href="https://go.microsoft.com/fwlink/?LinkID=398939">Bootstrap</a></li>
-        </ul>
-    </div>
-    <div class="col-md-3">
-        <h2>How to</h2>
-        <ul>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=398600">Add a Controller and View</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699315">Manage User Secrets using Secret Manager.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699316">Use logging to log a message.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699317">Add packages using NuGet.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699319">Target development, staging or production environment.</a></li>
-        </ul>
-    </div>
-    <div class="col-md-3">
-        <h2>Overview</h2>
-        <ul>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=518008">Conceptual overview of what is ASP.NET Core</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699320">Fundamentals of ASP.NET Core such as Startup and middleware.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=398602">Working with Data</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=398603">Security</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=699321">Client side development</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=699322">Develop on different platforms</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=699323">Read more on the documentation site</a></li>
-        </ul>
-    </div>
-    <div class="col-md-3">
-        <h2>Run &amp; Deploy</h2>
-        <ul>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=517851">Run your app</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=517853">Run tools such as EF migrations and more</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=398609">Publish to Microsoft Azure Web Apps</a></li>
-        </ul>
-    </div>
+<h4 data-bind="if: loaded() && ajaxError()" class="hidden-by-default">Synchronization failed. Make sure, that your API key is valid. @Html.ActionLink("Click here to login again", "Login").</h4>
+<div id="all-done" data-bind="if: loaded() && !ajaxError() && tasks().length == 0" class="hidden-by-default">
+    <h2>All done!</h2>
+    <p>All your tasks are in a good shape already :)</p>
+    <p>You might reload page if you think something new might have appeared.</p>
+
+    <button id="reload" type="button" class="btn btn-primary btn-lg">Reload page</button>
 </div>
+<div class="reviewedTask hidden-by-default" data-bind="if: loaded() && !ajaxError() && tasks().length !== 0">
+
+    <div class="task" data-bind="with: currentTask">
+        <span data-bind="text: content"></span> <strong>(<span data-bind="text: time"></span> min)</strong>
+    </div>
+
+    <h4 data-bind="if: labels().length == 0">You have no labels defined. Define your contexts as labels in Todoist first.</h4>
+
+    <div class="row" data-bind="with: currentTask">
+        <div class="col-xs-3">
+            <div class="priority priority-1 glyphicon glyphicon-flag" data-bind="css: { selected: priority === 1 }" data-priority="1"></div>
+        </div>
+        <div class="col-xs-3">
+            <div class="priority priority-2 glyphicon glyphicon-flag" data-bind="css: { selected: priority === 2 }" data-priority="2"></div>
+        </div>
+        <div class="col-xs-3">
+            <div class="priority priority-3 glyphicon glyphicon-flag" data-bind="css: { selected: priority === 3 }" data-priority="3"></div>
+        </div>
+        <div class="col-xs-3">
+            <div class="priority priority-4 glyphicon glyphicon-flag" data-bind="css: { selected: priority === 4 }" data-priority="4"></div>
+        </div>
+    </div>
+
+    <div class="all-times row">
+        <div class="col-xs-3">
+            <div class="time reset-time" data-time-to-add="0">reset</div>
+        </div>
+        <div class="col-xs-3">
+            <div class="time add-time" data-time-to-add="15">+15 min</div>
+        </div>
+        <div class="col-xs-3">
+            <div class="time add-time" data-time-to-add="5">+5 min</div>
+        </div>
+        <div class="col-xs-3">
+            <div class="time add-time" data-time-to-add="1">+1 min</div>
+        </div>
+    </div>
+
+    <div class="all-labels row" data-bind="foreach: labels">
+        <div class="col-xs-4">
+            <div class="label" data-bind='attr: {"data-id": id}'>
+                <span data-bind="css: glyphicon" class="glyphicon"></span><br />
+                <span data-bind="text: name"></span>
+            </div>
+        </div>
+    </div>
+
+    <nav class="footer row">
+        <div class="col-xs-4">
+            <button id="back" type="button" class="btn btn-lg" data-bind="enable: isFirstTask() === false">Back</button>
+        </div>
+        <div class="col-xs-8" data-bind="visible: isLastTask() === false">
+            <button id="save" type="button" class="btn btn-primary btn-lg" data-bind="enable: isLastTask() === false">Next</button>
+        </div>
+        <div class="col-xs-8" data-bind="visible: isLastTask() === true">
+            <button id="sync" type="button" class="btn btn-info btn-lg">Sync</button>
+        </div>
+
+    </nav>
+</div>
+
+<script src="~/lib/jquery-3.2.1.min.js"></script>
+<script src="~/lib/knockout-3.4.2.js"></script>
+<script src="~/js/reviewapp.js"></script>
+<script type="text/javascript">
+        $(".hidden-by-default").removeClass("hidden-by-default");
+</script>
