Allow update task time (implement back-end side of the feature)

--- a/source/Taurit.TodoistTools.Review/Views/Home/Index.cshtml
+++ b/source/Taurit.TodoistTools.Review/Views/Home/Index.cshtml
@@ -41,7 +41,7 @@
         </div>
     </div>
 
-    <div class="all-times row">
+    <div class="all-times row" data-bind="if: !currentTask.timeDefined">
         <div class="col-xs-3">
             <div class="time reset-time" data-time-to-add="0">reset</div>
         </div>
