--- a/source/Taurit.TodoistTools.Review/wwwroot/css/reviewapp.less
+++ b/source/Taurit.TodoistTools.Review/wwwroot/css/reviewapp.less
@@ -124,17 +124,16 @@
     margin-top: 10px;
     padding-top: 10px;
     padding-bottom: 10px;
-
-    &.add-time {
-        border: 1px solid #b8ffd7;
-        background-color: #f5fff5;
-    }
-
-    &.reset-time {
-        border: 1px solid #ff9999;
-        background-color: #ffecec;
-    }
 }
+
+.time-inline {
+    padding: 10px;
+    border: 1px solid black;
+}
+.time-inline-result {
+    background-color: #d0ffbb;
+}
+
 
 .hidden-by-default {
     display: none;
