--- a/source/Taurit.TodoistTools.Review/wwwroot/css/reviewapp.css
+++ b/source/Taurit.TodoistTools.Review/wwwroot/css/reviewapp.css
@@ -96,13 +96,12 @@
   padding-top: 10px;
   padding-bottom: 10px;
 }
-.time.add-time {
-  border: 1px solid #b8ffd7;
-  background-color: #f5fff5;
+.time-inline {
+  padding: 10px;
+  border: 1px solid black;
 }
-.time.reset-time {
-  border: 1px solid #ff9999;
-  background-color: #ffecec;
+.time-inline-result {
+  background-color: #d0ffbb;
 }
 .hidden-by-default {
   display: none;
