--- a/source/Taurit.TodoistTools.Review/wwwroot/css/reviewapp.less
+++ b/source/Taurit.TodoistTools.Review/wwwroot/css/reviewapp.less
@@ -1,6 +1,10 @@
 ﻿// color definitions
 @selectedLabelBackground: #2ECC40;
 
+body {
+    overscroll-behavior: contain; // this should prevent the "refresh" action on mobile devices, which often causes loss of reviewed data
+}
+
 .reviewedTask {
     .task {
         padding: 7px 5px 3px 5px;
@@ -121,7 +125,6 @@
     text-align: center;
     color: #000000;
     cursor: pointer;
-    margin-top: 10px;
     padding-top: 10px;
     padding-bottom: 10px;
 }
@@ -129,6 +132,8 @@
 .time-inline {
     padding: 10px;
     border: 1px solid black;
+    display: inline-block;
+    margin-top: 4px;
 }
 .time-inline-result {
     background-color: #d0ffbb;
@@ -141,4 +146,9 @@
 
 .jumbotron-login, .jumbotron-loading {
     margin-top: 20px;
+}
+
+.reload-page {
+    margin-top: 30px;
+    text-align: center;
 }
