Force cache refresh in browsers

--- a/source/Taurit.TodoistTools.Review/Views/Home/Index.cshtml
+++ b/source/Taurit.TodoistTools.Review/Views/Home/Index.cshtml
@@ -75,7 +75,7 @@
 
 <script src="~/lib/jquery-3.2.1.min.js"></script>
 <script src="~/lib/knockout-3.4.2.js"></script>
-<script src="~/js/reviewapp.js"></script>
+<script src="~/js/reviewapp.js?v=2"></script>
 <script type="text/javascript">
         $(".hidden-by-default").removeClass("hidden-by-default");
 </script>
