--- a/source/Taurit.TodoistTools.Review/wwwroot/css/reviewapp.less
+++ b/source/Taurit.TodoistTools.Review/wwwroot/css/reviewapp.less
@@ -135,8 +135,16 @@ body {
     display: inline-block;
     margin-top: 4px;
 }
+
+.time-inline-reset {
+    color: darkred;
+}
 .time-inline-result {
-    background-color: #d0ffbb;
+    background-color: transparent;
+
+    &.highlighted {
+        background-color: #d0ffbb;
+    }
 }
 
 
