Add "show all sections" action link

--- a/source/Taurit.TodoistTools.Review/Views/Home/Index.cshtml
+++ b/source/Taurit.TodoistTools.Review/Views/Home/Index.cshtml
@@ -70,12 +70,12 @@
         </div>
     </nav>
     
-    <p class="reload-page"><a onclick="location.reload();">Reload page</a></p>
+    <p class="reload-page"><a onclick="location.reload();">Reload page</a> | <a id="show-all-sections">Show all sections</a></p>
 </div>
 
 <script src="~/lib/jquery-3.2.1.min.js"></script>
 <script src="~/lib/knockout-3.4.2.js"></script>
-<script src="~/js/reviewapp.js?v=2"></script>
+<script src="~/js/reviewapp.js?v=3"></script>
 <script type="text/javascript">
         $(".hidden-by-default").removeClass("hidden-by-default");
 </script>
