Update priority colours for consistency with the new Todoist colours

--- a/source/Taurit.TodoistTools.Review/wwwroot/css/reviewapp.less
+++ b/source/Taurit.TodoistTools.Review/wwwroot/css/reviewapp.less
@@ -75,7 +75,7 @@ body {
     margin-top: 10px;
 
     @p1Color: #000000;
-    @p2Color: #d4b300;
+    @p2Color: #4073D6;
     @p3Color: #f88900;
     @p4Color: #dc1010;
 
@@ -93,7 +93,7 @@ body {
     &.priority-2 {
         color: @p2Color;
         border-color: @p2Color;
-        background-color: #fffdf4;
+        background-color: #ECF1FB;
 
         &.selected {
             box-shadow: 0px 0px 5px @p2Color;
