--- a/source/Taurit.TodoistTools.Review/wwwroot/css/reviewapp.css
+++ b/source/Taurit.TodoistTools.Review/wwwroot/css/reviewapp.css
@@ -68,12 +68,12 @@
   box-shadow: 0px 0px 5px #000000;
 }
 .priority.priority-2 {
-  color: #d4b300;
-  border-color: #d4b300;
-  background-color: #fffdf4;
+  color: #4073D6;
+  border-color: #4073D6;
+  background-color: #ECF1FB;
 }
 .priority.priority-2.selected {
-  box-shadow: 0px 0px 5px #d4b300;
+  box-shadow: 0px 0px 5px #4073D6;
 }
 .priority.priority-3 {
   color: #f88900;
