--- a/source/Taurit.TodoistTools.Review/Views/Home/Login.cshtml
+++ b/source/Taurit.TodoistTools.Review/Views/Home/Login.cshtml
@@ -9,7 +9,7 @@
     <form class="form-inline" autocomplete="on">
         Enter API token to log in:
         <div class="form-group">
-            @Html.EditorFor(model => model.ApiToken, new {htmlAttributes = new {@class = "form-control", placeholder = "Todoist API Token"}})
+            @Html.EditorFor(model => model.ApiToken, new {htmlAttributes = new {@class = "form-control", placeholder = "Todoist API Token", autocomplete="on"}})
         </div>
 
         <button type="submit" class="btn btn-primary">Log in</button>
