--- a/source/Taurit.TodoistTools.Review/wwwroot/css/reviewapp.css
+++ b/source/Taurit.TodoistTools.Review/wwwroot/css/reviewapp.css
@@ -57,13 +57,12 @@
   border: 2px solid transparent;
 }
 .priority.priority-1 {
-  color: #000000;
-  border-color: #000000;
-  background-color: #ffffff;
+  color: #333333;
+  border-color: #333333;
+  background-color: transparent;
 }
 .priority.priority-1.selected {
-  border: 2px dashed #000000;
-  box-shadow: 0px 0px 5px #000000;
+  box-shadow: 0px 0px 13px #333333;
 }
 .priority.priority-2 {
   color: #4073D6;
@@ -71,8 +70,7 @@
   background-color: #ECF1FB;
 }
 .priority.priority-2.selected {
-  border: 2px dashed #000000;
-  box-shadow: 0px 0px 5px #4073D6;
+  box-shadow: 0px 0px 13px #4073D6;
 }
 .priority.priority-3 {
   color: #f88900;
@@ -80,8 +78,7 @@
   background-color: #fff0de;
 }
 .priority.priority-3.selected {
-  border: 2px dashed #000000;
-  box-shadow: 0px 0px 5px #f88900;
+  box-shadow: 0px 0px 13px #f88900;
 }
 .priority.priority-4 {
   color: #dc1010;
@@ -89,8 +86,7 @@
   background-color: #ffe7e7;
 }
 .priority.priority-4.selected {
-  border: 2px dashed #000000;
-  box-shadow: 0px 0px 5px #dc1010;
+  box-shadow: 0px 0px 13px #dc1010;
 }
 .time {
   text-align: center;
@@ -101,7 +97,7 @@
 }
 .time-inline {
   padding: 10px;
-  border: 1px solid black;
+  border: 2px solid #AAAAAA;
   display: inline-block;
   margin-top: 4px;
 }
