--- a/source/Taurit.TodoistTools.Review/wwwroot/css/reviewapp.less
+++ b/source/Taurit.TodoistTools.Review/wwwroot/css/reviewapp.less
@@ -72,26 +72,23 @@ body {
     margin-top: 10px;
 
 
-    @p1Color: #000000;
+    @p1Color: #333333;
     @p2Color: #4073D6;
     @p3Color: #f88900;
     @p4Color: #dc1010;
 
     // make selection more clearly visible in Android's dark content mode - delicate outline was not enough, border needed
     @borderSize: 2px;
-    @borderColor: #000000;
-    @borderStyle: dashed;
     border: @borderSize solid transparent;
 
     &.priority-1 {
         // lowest, "natural" priority
         color: @p1Color;
-        border-color: @p1Color;
-        background-color: #ffffff;
+        border-color: #333333;
+        background-color: transparent;
 
         &.selected {
-            border: @borderSize @borderStyle @borderColor;
-            box-shadow: 0px 0px 5px @p1Color;
+            box-shadow: 0px 0px 13px @p1Color;
         }
     }
 
@@ -101,8 +98,7 @@ body {
         background-color: #ECF1FB;
 
         &.selected {
-            border: @borderSize @borderStyle @borderColor;
-            box-shadow: 0px 0px 5px @p2Color;
+            box-shadow: 0px 0px 13px @p2Color;
         }
     }
 
@@ -112,8 +108,7 @@ body {
         background-color: #fff0de;
 
         &.selected {
-            border: @borderSize @borderStyle @borderColor;
-            box-shadow: 0px 0px 5px @p3Color;
+            box-shadow: 0px 0px 13px @p3Color;
         }
     }
 
@@ -123,8 +118,7 @@ body {
         background-color: #ffe7e7;
 
         &.selected {
-            border: @borderSize @borderStyle @borderColor;
-            box-shadow: 0px 0px 5px @p4Color;
+            box-shadow: 0px 0px 13px @p4Color;
         }
     }
 }
@@ -139,7 +133,7 @@ body {
 
 .time-inline {
     padding: 10px;
-    border: 1px solid black;
+    border: 2px solid #AAAAAA;
     display: inline-block;
     margin-top: 4px;
 }
