--- a/source/Taurit.TodoistTools.Review/Views/Home/Index.cshtml
+++ b/source/Taurit.TodoistTools.Review/Views/Home/Index.cshtml
@@ -4,10 +4,10 @@
 }
 
 <div data-bind="if: !loaded()" class="hidden-by-default">
-    <div class="jumbotron jumbotron-loading">
-        <h1>Loading...</h1>
-        <p>Todoist Review App is getting your data. It should take no more than a few seconds. Please wait!</p>
-    </div>
+    <h2>Loading...</h2>
+    <p class="definition p4"><b>ASAP</b> => Visible all the time</p>
+    <p class="definition p3"><b>The sooner, the better</b> => Visible in the context, top of the list</p>
+    <p class="definition p2"><b>No hurry</b> => Visible in the proper context</p>
 </div>
 
 <h4 data-bind="if: loaded() && ajaxError()" class="hidden-by-default">Synchronization failed. Make sure, that your API key is valid. @Html.ActionLink("Click here to login again", "Login").</h4>
