--- a/source/Taurit.TodoistTools.Review/wwwroot/css/reviewapp.less
+++ b/source/Taurit.TodoistTools.Review/wwwroot/css/reviewapp.less
@@ -166,3 +166,33 @@ body {
 .content-box {
     width: 100%;
 }
+
+.definition {
+    @p1Color: #333333;
+    @p2Color: #4073D6;
+    @p3Color: #f88900;
+    @p4Color: #dc1010;
+
+    padding: 8px 7px;
+    border: 3px solid transparent;
+
+    &.p1 {
+        border-color: @p1Color;
+        background-color: fade(@p1Color, 10%);
+    }
+
+    &.p2 {
+        border-color: @p2Color;
+        background-color: fade(@p2Color, 10%);
+    }
+
+    &.p3 {
+        border-color: @p3Color;
+        background-color: fade(@p3Color, 10%);
+    }
+
+    &.p4 {
+        border-color: @p4Color;
+        background-color: fade(@p4Color, 10%);
+    }
+}
