--- a/source/Taurit.TodoistTools.Review/wwwroot/css/reviewapp.less
+++ b/source/Taurit.TodoistTools.Review/wwwroot/css/reviewapp.less
@@ -45,6 +45,7 @@ body {
                     background-color: lighten(@selectedLabelBackground, 5);
                 }
             }
+
         }
     }
 
@@ -195,4 +196,35 @@ body {
         border-color: @p4Color;
         background-color: fade(@p4Color, 10%);
     }
+}
+
+// style certain labels. This assumes that I'm the only user of this app really, which is true :P
+@workColorCode: #2b7fd0;
+@lifeColorCode: #0bb50e;
+@educationColorCode: #dea10d;
+@strategyColorCode: #c723bf;
+@eliminateColorCode: #fa8a8a;
+@cityColorCode: #797979;
+
+.eliminate {
+    background-color: @eliminateColorCode;
+    color: red !important;
+}
+
+.dtc {
+    color: @workColorCode !important;
+}
+
+.home, .sanok, .firefox, .pc-home {
+    color: @lifeColorCode !important;
+}
+
+.nawyk, .journal {
+    color: @strategyColorCode !important;
+}
+.anki, .watch, .\33 \30 minut {
+    color: @educationColorCode !important;
+}
+.market, .errand, .mobile {
+    color: @cityColorCode !important;
 }
