Revert "Color-code some icons"
This reverts commit 3d00bb3efa32fd2cde169f2b7d62faff848ffd1e.

--- a/source/Taurit.TodoistTools.Review/Views/Home/Index.cshtml
+++ b/source/Taurit.TodoistTools.Review/Views/Home/Index.cshtml
@@ -53,8 +53,8 @@
 
     <div class="all-labels row" data-bind="foreach: labels">
         <div class="col-xs-4">
-            <div class="label" data-bind='attr: {"data-id": id}, css: name'>
-                <span data-bind="css: glyphicon" class="glyphicon"></span><br/>
+            <div class="label" data-bind='attr: {"data-id": id}'>
+                <span data-bind="css: glyphicon" class="glyphicon"></span><br />
                 <span data-bind="text: name"></span>
             </div>
         </div>
