--- a/source/Taurit.TodoistTools.Review/wwwroot/css/reviewapp.css
+++ b/source/Taurit.TodoistTools.Review/wwwroot/css/reviewapp.css
@@ -126,21 +126,29 @@
 }
 .definition {
   padding: 8px 7px;
-  border: 3px solid transparent;
+  border: 1px solid transparent;
+  font-size: 18px;
+  font-family: monospace;
+  font-weight: bold;
 }
 .definition.p1 {
   border-color: #333333;
   background-color: rgba(51, 51, 51, 0.1);
+  color: #333333;
 }
 .definition.p2 {
   border-color: #4073D6;
   background-color: rgba(64, 115, 214, 0.1);
+  color: #4073D6;
 }
 .definition.p3 {
   border-color: #f88900;
   background-color: rgba(248, 137, 0, 0.1);
+  color: #f88900;
 }
 .definition.p4 {
   border-color: #dc1010;
   background-color: rgba(220, 16, 16, 0.1);
+  color: #dc1010;
+  margin-top: 10px;
 }
